--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="ui text container">
         <h1 class="ui inverted header"><i class="star icon"></i></h1>
         <h2>北邮人导航 &middot; BYR Wiki</h2>
-        <div class="ui inverted fluid left icon action input">
+        <div class="ui inverted fluid left icon action input" id="search-div">
           <i class="search icon"></i>
           <input id="search-query" type="text" placeholder="立即搜索">
           <select class="ui compact selection dropdown" id="search-services"></select>
